--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pwa-app",
-  "private": true,
-  "version": "0.0.0",
+  "name": "pwa-app-client",
+  "version": "0.1.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
